[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pydiskmark"
version = "0.1.0"
description = "pydiskmark — Python Disk Benchmark Utility"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
pydiskmark = "pydiskmark.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60

[tool.setuptools.packages.find]
where = ["."]
include = ["pydiskmark*"]
